exports[`no-unused-iterator-helper > invalid(1): items.values().map(transform); 1`] = `

  1 | items.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(1): items.values().map(transform); 2`] = `

Message:
> 1 | items.values().map(transform);
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.values().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(10): globalThis.Iterator.from(items).map(transform); 1`] = `

  1 | globalThis.Iterator.from(items).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(10): globalThis.Iterator.from(items).map(transform); 2`] = `

Message:
> 1 | globalThis.Iterator.from(items).map(transform);
    |                                 ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | globalThis.Iterator.from(items).forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(11): Iterator.concat(first, second).take(2); 1`] = `

  1 | Iterator.concat(first, second).take(2);

`;

exports[`no-unused-iterator-helper > invalid(11): Iterator.concat(first, second).take(2); 2`] = `

Message:
> 1 | Iterator.concat(first, second).take(2);
    |                                ^^^^ Consume the iterator returned by \`.take(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(12): Iterator.zip(iterables).filter(predicate); 1`] = `

  1 | Iterator.zip(iterables).filter(predicate);

`;

exports[`no-unused-iterator-helper > invalid(12): Iterator.zip(iterables).filter(predicate); 2`] = `

Message:
> 1 | Iterator.zip(iterables).filter(predicate);
    |                         ^^^^^^ Consume the iterator returned by \`.filter(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(13): Iterator.zipKeyed(iterables).drop(1); 1`] = `

  1 | Iterator.zipKeyed(iterables).drop(1);

`;

exports[`no-unused-iterator-helper > invalid(13): Iterator.zipKeyed(iterables).drop(1); 2`] = `

Message:
> 1 | Iterator.zipKeyed(iterables).drop(1);
    |                              ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(14): items.values().map(transform).filter(predicate).take(2); 1`] = `

  1 | items.values().map(transform).filter(predicate).take(2);

`;

exports[`no-unused-iterator-helper > invalid(14): items.values().map(transform).filter(predicate).take(2); 2`] = `

Message:
> 1 | items.values().map(transform).filter(predicate).take(2);
    |                                                 ^^^^ Consume the iterator returned by \`.take(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(15): items.values().filter(predicate).map(transform); 1`] = `

  1 | items.values().filter(predicate).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(15): items.values().filter(predicate).map(transform); 2`] = `

Message:
> 1 | items.values().filter(predicate).map(transform);
    |                                  ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.values().filter(predicate).forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(16): items?.values().map(transform); 1`] = `

  1 | items?.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(16): items?.values().map(transform); 2`] = `

Message:
> 1 | items?.values().map(transform);
    |                 ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items?.values().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(17): items.values()?.map(transform); 1`] = `

  1 | items.values()?.map(transform);

`;

exports[`no-unused-iterator-helper > invalid(17): items.values()?.map(transform); 2`] = `

Message:
> 1 | items.values()?.map(transform);
    |                 ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.values()?.forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(18): items.values().map?.(transform); 1`] = `

  1 | items.values().map?.(transform);

`;

exports[`no-unused-iterator-helper > invalid(18): items.values().map?.(transform); 2`] = `

Message:
> 1 | items.values().map?.(transform);
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.values().forEach?.(transform);

`;

exports[`no-unused-iterator-helper > invalid(19): void items.values().map(transform); 1`] = `

  1 | void items.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(19): void items.values().map(transform); 2`] = `

Message:
> 1 | void items.values().map(transform);
    |                     ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | void items.values().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(2): items.values().filter(predicate); 1`] = `

  1 | items.values().filter(predicate);

`;

exports[`no-unused-iterator-helper > invalid(2): items.values().filter(predicate); 2`] = `

Message:
> 1 | items.values().filter(predicate);
    |                ^^^^^^ Consume the iterator returned by \`.filter(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(20): await items.values().map(transform); 1`] = `

  1 | await items.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(20): await items.values().map(transform); 2`] = `

Message:
> 1 | await items.values().map(transform);
    |                      ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | await items.values().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(21): const unused = void items.values().map(transform); 1`] = `

  1 | const unused = void items.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(21): const unused = void items.values().map(transform); 2`] = `

Message:
> 1 | const unused = void items.values().map(transform);
    |                                    ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const unused = void items.values().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(22): function run() { return void items.values().map(transform); } 1`] = `

  1 | function run() { return void items.values().map(transform); }

`;

exports[`no-unused-iterator-helper > invalid(22): function run() { return void items.values().map(transform); } 2`] = `

Message:
> 1 | function run() { return void items.values().map(transform); }
    |                                             ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function run() { return void items.values().forEach(transform); }

`;

exports[`no-unused-iterator-helper > invalid(23): const view = <div>{void items.values().map(transform)}</div>; 1`] = `

  1 | const view = <div>{void items.values().map(transform)}</div>;

`;

exports[`no-unused-iterator-helper > invalid(23): const view = <div>{void items.values().map(transform)}</div>; 2`] = `

Message:
> 1 | const view = <div>{void items.values().map(transform)}</div>;
    |                                        ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const view = <div>{void items.values().forEach(transform)}</div>;

`;

exports[`no-unused-iterator-helper > invalid(24): for (items.values().map(transform); condition;) {} 1`] = `

  1 | for (items.values().map(transform); condition;) {}

`;

exports[`no-unused-iterator-helper > invalid(24): for (items.values().map(transform); condition;) {} 2`] = `

Message:
> 1 | for (items.values().map(transform); condition;) {}
    |                     ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | for (items.values().forEach(transform); condition;) {}

`;

exports[`no-unused-iterator-helper > invalid(25): for (; condition; items.values().drop(1)) {} 1`] = `

  1 | for (; condition; items.values().drop(1)) {}

`;

exports[`no-unused-iterator-helper > invalid(25): for (; condition; items.values().drop(1)) {} 2`] = `

Message:
> 1 | for (; condition; items.values().drop(1)) {}
    |                                  ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(26): ((items.values()).map(transform)); 1`] = `

  1 | ((items.values()).map(transform));

`;

exports[`no-unused-iterator-helper > invalid(26): ((items.values()).map(transform)); 2`] = `

Message:
> 1 | ((items.values()).map(transform));
    |                   ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | ((items.values()).forEach(transform));

`;

exports[`no-unused-iterator-helper > invalid(27): items.values() /* receiver */ .map /* method */ (/* callback */ transform); 1`] = `

  1 | items.values() /* receiver */ .map /* method */ (/* callback */ transform);

`;

exports[`no-unused-iterator-helper > invalid(27): items.values() /* receiver */ .map /* method */ (/* callback */ transform); 2`] = `

Message:
> 1 | items.values() /* receiver */ .map /* method */ (/* callback */ transform);
    |                                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.values() /* receiver */ .forEach /* method */ (/* callback */ transform);

`;

exports[`no-unused-iterator-helper > invalid(28): items.values().map(transform, extra); 1`] = `

  1 | items.values().map(transform, extra);

`;

exports[`no-unused-iterator-helper > invalid(28): items.values().map(transform, extra); 2`] = `

Message:
> 1 | items.values().map(transform, extra);
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(29): items.values().map(...callbacks); 1`] = `

  1 | items.values().map(...callbacks);

`;

exports[`no-unused-iterator-helper > invalid(29): items.values().map(...callbacks); 2`] = `

Message:
> 1 | items.values().map(...callbacks);
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(3): items.values().flatMap(transform); 1`] = `

  1 | items.values().flatMap(transform);

`;

exports[`no-unused-iterator-helper > invalid(3): items.values().flatMap(transform); 2`] = `

Message:
> 1 | items.values().flatMap(transform);
    |                ^^^^^^^ Consume the iterator returned by \`.flatMap(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(30): const iterator = items.values(); iterator.map(transform); 1`] = `

  1 | const iterator = items.values(); iterator.map(transform);

`;

exports[`no-unused-iterator-helper > invalid(30): const iterator = items.values(); iterator.map(transform); 2`] = `

Message:
> 1 | const iterator = items.values(); iterator.map(transform);
    |                                           ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const iterator = items.values(); iterator.forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(31): const iterator = items.values(); const alias = iterator; alias.drop(1); 1`] = `

  1 | const iterator = items.values(); const alias = iterator; alias.drop(1);

`;

exports[`no-unused-iterator-helper > invalid(31): const iterator = items.values(); const alias = iterator; alias.drop(1); 2`] = `

Message:
> 1 | const iterator = items.values(); const alias = iterator; alias.drop(1);
    |                                                                ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(32): const iterator = items.values().map(transform); iterator.filter(predicate); 1`] = `

  1 | const iterator = items.values().map(transform); iterator.filter(predicate);

`;

exports[`no-unused-iterator-helper > invalid(32): const iterator = items.values().map(transform); iterator.filter(predicate); 2`] = `

Message:
> 1 | const iterator = items.values().map(transform); iterator.filter(predicate);
    |                                                          ^^^^^^ Consume the iterator returned by \`.filter(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(33): function * generate() { yield 1; } generate().map(transform); 1`] = `

  1 | function * generate() { yield 1; } generate().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(33): function * generate() { yield 1; } generate().map(transform); 2`] = `

Message:
> 1 | function * generate() { yield 1; } generate().map(transform);
    |                                               ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function * generate() { yield 1; } generate().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(34): const generate = function * () { yield 1; }; generate().take(1); 1`] = `

  1 | const generate = function * () { yield 1; }; generate().take(1);

`;

exports[`no-unused-iterator-helper > invalid(34): const generate = function * () { yield 1; }; generate().take(1); 2`] = `

Message:
> 1 | const generate = function * () { yield 1; }; generate().take(1);
    |                                                         ^^^^ Consume the iterator returned by \`.take(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(35): function * generate() { yield 1; } const alias = generate; alias().map(transform); 1`] = `

  1 | function * generate() { yield 1; } const alias = generate; alias().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(35): function * generate() { yield 1; } const alias = generate; alias().map(transform); 2`] = `

Message:
> 1 | function * generate() { yield 1; } const alias = generate; alias().map(transform);
    |                                                                    ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function * generate() { yield 1; } const alias = generate; alias().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(36): function run(iterator: Iterator<number>) { iterator.map(transform); } 1`] = `

  1 | function run(iterator: Iterator<number>) { iterator.map(transform); }

`;

exports[`no-unused-iterator-helper > invalid(36): function run(iterator: Iterator<number>) { iterator.map(transform); } 2`] = `

Message:
> 1 | function run(iterator: Iterator<number>) { iterator.map(transform); }
    |                                                     ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function run(iterator: Iterator<number>) { iterator.forEach(transform); }

`;

exports[`no-unused-iterator-helper > invalid(37): function run(iterator: IterableIterator<number>) { iterator.drop(1); } 1`] = `

  1 | function run(iterator: IterableIterator<number>) { iterator.drop(1); }

`;

exports[`no-unused-iterator-helper > invalid(37): function run(iterator: IterableIterator<number>) { iterator.drop(1); } 2`] = `

Message:
> 1 | function run(iterator: IterableIterator<number>) { iterator.drop(1); }
    |                                                             ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(38): function run(iterator: StringIterator<string>) { iterator.map(transform); } 1`] = `

  1 | function run(iterator: StringIterator<string>) { iterator.map(transform); }

`;

exports[`no-unused-iterator-helper > invalid(38): function run(iterator: StringIterator<string>) { iterator.map(transform); } 2`] = `

Message:
> 1 | function run(iterator: StringIterator<string>) { iterator.map(transform); }
    |                                                           ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function run(iterator: StringIterator<string>) { iterator.forEach(transform); }

`;

exports[`no-unused-iterator-helper > invalid(39): const iterator = items!.values(); iterator.map(transform); 1`] = `

  1 | const iterator = items!.values(); iterator.map(transform);

`;

exports[`no-unused-iterator-helper > invalid(39): const iterator = items!.values(); iterator.map(transform); 2`] = `

Message:
> 1 | const iterator = items!.values(); iterator.map(transform);
    |                                            ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const iterator = items!.values(); iterator.forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(4): items.values().take(2); 1`] = `

  1 | items.values().take(2);

`;

exports[`no-unused-iterator-helper > invalid(4): items.values().take(2); 2`] = `

Message:
> 1 | items.values().take(2);
    |                ^^^^ Consume the iterator returned by \`.take(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(40): (items.values() as Iterator<number>).map(transform); 1`] = `

  1 | (items.values() as Iterator<number>).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(40): (items.values() as Iterator<number>).map(transform); 2`] = `

Message:
> 1 | (items.values() as Iterator<number>).map(transform);
    |                                      ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | (items.values() as Iterator<number>).forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(41): items.values().map<number>(transform); 1`] = `

  1 | items.values().map<number>(transform);

`;

exports[`no-unused-iterator-helper > invalid(41): items.values().map<number>(transform); 2`] = `

Message:
> 1 | items.values().map<number>(transform);
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(42): items.values().map(transform) as Iterator<number>; 1`] = `

  1 | items.values().map(transform) as Iterator<number>;

`;

exports[`no-unused-iterator-helper > invalid(42): items.values().map(transform) as Iterator<number>; 2`] = `

Message:
> 1 | items.values().map(transform) as Iterator<number>;
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(43): <Iterator<number>>items.values().map(transform); 1`] = `

  1 | <Iterator<number>>items.values().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(43): <Iterator<number>>items.values().map(transform); 2`] = `

Message:
> 1 | <Iterator<number>>items.values().map(transform);
    |                                  ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(44): items.values().map(transform)!; 1`] = `

  1 | items.values().map(transform)!;

`;

exports[`no-unused-iterator-helper > invalid(44): items.values().map(transform)!; 2`] = `

Message:
> 1 | items.values().map(transform)!;
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(45): items.values().map(transform) satisfies Iterator<number>; 1`] = `

  1 | items.values().map(transform) satisfies Iterator<number>;

`;

exports[`no-unused-iterator-helper > invalid(45): items.values().map(transform) satisfies Iterator<number>; 2`] = `

Message:
> 1 | items.values().map(transform) satisfies Iterator<number>;
    |                ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(46): (await items.values().map(transform)) as Iterator<number>; 1`] = `

  1 | (await items.values().map(transform)) as Iterator<number>;

`;

exports[`no-unused-iterator-helper > invalid(46): (await items.values().map(transform)) as Iterator<number>; 2`] = `

Message:
> 1 | (await items.values().map(transform)) as Iterator<number>;
    |                       ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(47): void (items.values().map(transform) as Iterator<number>); 1`] = `

  1 | void (items.values().map(transform) as Iterator<number>);

`;

exports[`no-unused-iterator-helper > invalid(47): void (items.values().map(transform) as Iterator<number>); 2`] = `

Message:
> 1 | void (items.values().map(transform) as Iterator<number>);
    |                      ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(48): declare function getIterator(): IteratorObject<number>; getIterator().map(value => value); 1`] = `

Filename: file.ts

  1 | declare function getIterator(): IteratorObject<number>; getIterator().map(value => value);

`;

exports[`no-unused-iterator-helper > invalid(48): declare function getIterator(): IteratorObject<number>; getIterator().map(value => value); 2`] = `

Message:
> 1 | declare function getIterator(): IteratorObject<number>; getIterator().map(value => value);
    |                                                                       ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | declare function getIterator(): IteratorObject<number>; getIterator().forEach(value => value);

`;

exports[`no-unused-iterator-helper > invalid(49): const iterator = \"value\"[Symbol.iterator](); iterator.map(value => value); 1`] = `

Filename: file.ts

  1 | const iterator = "value"[Symbol.iterator](); iterator.map(value => value);

`;

exports[`no-unused-iterator-helper > invalid(49): const iterator = \"value\"[Symbol.iterator](); iterator.map(value => value); 2`] = `

Message:
> 1 | const iterator = "value"[Symbol.iterator](); iterator.map(value => value);
    |                                                       ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const iterator = "value"[Symbol.iterator](); iterator.forEach(value => value);

`;

exports[`no-unused-iterator-helper > invalid(5): items.values().drop(2); 1`] = `

  1 | items.values().drop(2);

`;

exports[`no-unused-iterator-helper > invalid(5): items.values().drop(2); 2`] = `

Message:
> 1 | items.values().drop(2);
    |                ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(50): const iterator = new URLSearchParams()[Symbol.iterator](); iterator.map(value => value); 1`] = `

Filename: file.ts

  1 | const iterator = new URLSearchParams()[Symbol.iterator](); iterator.map(value => value);

`;

exports[`no-unused-iterator-helper > invalid(50): const iterator = new URLSearchParams()[Symbol.iterator](); iterator.map(value => value); 2`] = `

Message:
> 1 | const iterator = new URLSearchParams()[Symbol.iterator](); iterator.map(value => value);
    |                                                                     ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | const iterator = new URLSearchParams()[Symbol.iterator](); iterator.forEach(value => value);

`;

exports[`no-unused-iterator-helper > invalid(51): function * generate() { yield 1; } generate().map(value => value); 1`] = `

Filename: file.ts

  1 | function * generate() { yield 1; } generate().map(value => value);

`;

exports[`no-unused-iterator-helper > invalid(51): function * generate() { yield 1; } generate().map(value => value); 2`] = `

Message:
> 1 | function * generate() { yield 1; } generate().map(value => value);
    |                                               ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function * generate() { yield 1; } generate().forEach(value => value);

`;

exports[`no-unused-iterator-helper > invalid(52): (source as Iterator<number>).map(transform); 1`] = `

  1 | (source as Iterator<number>).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(52): (source as Iterator<number>).map(transform); 2`] = `

Message:
> 1 | (source as Iterator<number>).map(transform);
    |                              ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | (source as Iterator<number>).forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(53): (<IteratorObject<number>>source).drop(1); 1`] = `

  1 | (<IteratorObject<number>>source).drop(1);

`;

exports[`no-unused-iterator-helper > invalid(53): (<IteratorObject<number>>source).drop(1); 2`] = `

Message:
> 1 | (<IteratorObject<number>>source).drop(1);
    |                                  ^^^^ Consume the iterator returned by \`.drop(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(54): (source as Iterator<number>)!.map(transform); 1`] = `

  1 | (source as Iterator<number>)!.map(transform);

`;

exports[`no-unused-iterator-helper > invalid(54): (source as Iterator<number>)!.map(transform); 2`] = `

Message:
> 1 | (source as Iterator<number>)!.map(transform);
    |                               ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | (source as Iterator<number>)!.forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(55): void await (items.values().map(transform) as Iterator<number>); 1`] = `

  1 | void await (items.values().map(transform) as Iterator<number>);

`;

exports[`no-unused-iterator-helper > invalid(55): void await (items.values().map(transform) as Iterator<number>); 2`] = `

Message:
> 1 | void await (items.values().map(transform) as Iterator<number>);
    |                            ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(56): for (; condition; items.values().filter(predicate).map(transform)) {} 1`] = `

  1 | for (; condition; items.values().filter(predicate).map(transform)) {}

`;

exports[`no-unused-iterator-helper > invalid(56): for (; condition; items.values().filter(predicate).map(transform)) {} 2`] = `

Message:
> 1 | for (; condition; items.values().filter(predicate).map(transform)) {}
    |                                                    ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | for (; condition; items.values().filter(predicate).forEach(transform)) {}

`;

exports[`no-unused-iterator-helper > invalid(57): type SetIterator<T> = T[]; function run(iterator: IteratorObject<number>) { iterator.map(transform); } 1`] = `

  1 | type SetIterator<T> = T[]; function run(iterator: IteratorObject<number>) { iterator.map(transform); }

`;

exports[`no-unused-iterator-helper > invalid(57): type SetIterator<T> = T[]; function run(iterator: IteratorObject<number>) { iterator.map(transform); } 2`] = `

Message:
> 1 | type SetIterator<T> = T[]; function run(iterator: IteratorObject<number>) { iterator.map(transform); }
    |                                                                                      ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | type SetIterator<T> = T[]; function run(iterator: IteratorObject<number>) { iterator.forEach(transform); }

`;

exports[`no-unused-iterator-helper > invalid(58): type SetIterator<T> = T[]; declare function getIterator(): IteratorObject<number>; getIterator().map(transform); 1`] = `

Filename: file.ts

  1 | type SetIterator<T> = T[]; declare function getIterator(): IteratorObject<number>; getIterator().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(58): type SetIterator<T> = T[]; declare function getIterator(): IteratorObject<number>; getIterator().map(transform); 2`] = `

Message:
> 1 | type SetIterator<T> = T[]; declare function getIterator(): IteratorObject<number>; getIterator().map(transform);
    |                                                                                                  ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | type SetIterator<T> = T[]; declare function getIterator(): IteratorObject<number>; getIterator().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(59): text.matchAll().map(transform); 1`] = `

  1 | text.matchAll().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(59): text.matchAll().map(transform); 2`] = `

Message:
> 1 | text.matchAll().map(transform);
    |                 ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | text.matchAll().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(6): items.keys().map(transform); 1`] = `

  1 | items.keys().map(transform);

`;

exports[`no-unused-iterator-helper > invalid(6): items.keys().map(transform); 2`] = `

Message:
> 1 | items.keys().map(transform);
    |              ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | items.keys().forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(60): function run(iterator: IteratorObject<number> | undefined) { iterator!.map(transform); } 1`] = `

  1 | function run(iterator: IteratorObject<number> | undefined) { iterator!.map(transform); }

`;

exports[`no-unused-iterator-helper > invalid(60): function run(iterator: IteratorObject<number> | undefined) { iterator!.map(transform); } 2`] = `

Message:
> 1 | function run(iterator: IteratorObject<number> | undefined) { iterator!.map(transform); }
    |                                                                        ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | function run(iterator: IteratorObject<number> | undefined) { iterator!.forEach(transform); }

`;

exports[`no-unused-iterator-helper > invalid(7): items.entries().filter(predicate); 1`] = `

  1 | items.entries().filter(predicate);

`;

exports[`no-unused-iterator-helper > invalid(7): items.entries().filter(predicate); 2`] = `

Message:
> 1 | items.entries().filter(predicate);
    |                 ^^^^^^ Consume the iterator returned by \`.filter(…)\`; iterator helpers are lazy.

`;

exports[`no-unused-iterator-helper > invalid(8): text.matchAll(pattern).map(transform); 1`] = `

  1 | text.matchAll(pattern).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(8): text.matchAll(pattern).map(transform); 2`] = `

Message:
> 1 | text.matchAll(pattern).map(transform);
    |                        ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | text.matchAll(pattern).forEach(transform);

`;

exports[`no-unused-iterator-helper > invalid(9): Iterator.from(items).map(transform); 1`] = `

  1 | Iterator.from(items).map(transform);

`;

exports[`no-unused-iterator-helper > invalid(9): Iterator.from(items).map(transform); 2`] = `

Message:
> 1 | Iterator.from(items).map(transform);
    |                      ^^^ Consume the iterator returned by \`.map(…)\`; iterator helpers are lazy.

Suggestion 1/1: Use \`.forEach()\` to run the callback.:
  1 | Iterator.from(items).forEach(transform);

`;
